Primera parte del status finalizada, total euros invertidos

--- a/myCrypto/templates/spa_crypto.html
+++ b/myCrypto/templates/spa_crypto.html
@@ -109,7 +109,7 @@
                     <!-- <div class="field"></div>-->
                             <label class="label" for="moneda_from">De</label>
                         <!-- <div class="control">-->
-                            <div class="select is-medium"></div>
+                            <div class="select is-normal">
                                 <select name="moneda_from" id="moneda_from">
                                     <option value="EUR">Euro(EUR)</option>
                                     <option value="BNB">Binance Coin(BNB)</option>
@@ -132,7 +132,7 @@
                                     <option value="USDT">Tether(USDT)</option>
                                     <option value="TRX">Tron(TRX)</option>
                                 </select>
-                                
+                            </div>   
                             <label class="label" for="cantidad_inicial">Cantidad inicial</label>
                             <input class="input is-normal" type="number" name="cantidad_inicial" id="cantidad_inicial" placeholder="0"> 
                             <!--</div>-->
