Conseguida conversion a euros de todas las monedas from y to

--- a/myCrypto/templates/spa_crypto.html
+++ b/myCrypto/templates/spa_crypto.html
@@ -54,7 +54,8 @@
                         <h3 class="title is-3">Estado de la inversión</h3>
                         <label class="label is-size-5 mb-4">Total invertido (€):</label>
                         <input class="input is-normal" type="number" name="total_invertido" id="total_invertido" readonly>
-                        <div class="is-size-5 mb-4">Valor actual (€):</div>
+                        <label class="label is-size-5 mb-4">Valor actual (€):</label>
+                        <input class="input is-normal" type="number" name="valor_actual" id="valor_actual" readonly>
                         <div class="is-size-5 mb-4">Beneficio obtenido (€):</div>
                         
                         <button class="button is-success is-hovered is-focused" id="actualizar" >Actualizar</button><br/>
