--- a/myCrypto/templates/spa_crypto.html
+++ b/myCrypto/templates/spa_crypto.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Crypto Invest App</title>
     <link rel="stylesheet" href="/static/css/bulma.css"><!-- esta linea enlaza a la carpeta static/css para que el navegador muestre los resultados con estilos y no solo un json-->
-    <script src="/static/js/spa_crypto.js"></script> <!-- Esta linea sirve para que el navegador enlace al archivo spa.js que es donde se va a crear el template que va a mostrar la pagina-->
+    <script src="/static/js/spa_crypto.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> <!-- Esta linea sirve para que el navegador enlace al archivo spa.js que es donde se va a crear el template que va a mostrar la pagina-->
 </head>
   
 <body>
@@ -33,7 +34,7 @@
                 <div class="columns">
                     <div class="column is-7.5">
                         <h3 class="title is-3">Registro de movimientos</h3>
-                            <div class="table-container">
+                            <div class="table-container" style="width:850px; height:500px; overflow: scroll">
                                 <table class="table is-striped is-hoverable is-primary" name="tabla-movimientos" id="tabla-movimientos">
                                     <thead class="has-backgorund-info">
                                         <tr is-selected>
@@ -49,8 +50,9 @@
                                 </table>
                             </div>
                     </div>
-    
+                
                     <div class="column is-4">
+                    <form class="box" name="form-status" id="form-status">
                         <h3 class="title is-3">Estado de la inversión</h3>
                         <label class="label is-size-5 mb-4">Total invertido (€):</label>
                         <input class="input is-normal" type="number" name="total_invertido" id="total_invertido" readonly>
@@ -59,52 +61,54 @@
                         <div class="is-size-5 mb-4">Beneficio obtenido (€):</div>
                         
                         <button class="button is-success is-hovered is-focused" id="actualizar" >Actualizar</button><br/>
-                        <br/>
-                    <div class="column"> 
-                    <h3 class="title is-3">Saldos actuales</h3>
-                    <div class="container">
-                        <!--<table class="table-saldos is-striped is-hoverable is-primary" name="tabla-saldos" id="tabla-saldos">
-                            <thead class="has-backgorund-info">
-                                <tr is-selected>
-                                    <th>moneda</th>
-                                    <th>saldo</th>
-                                    <th>valor_en_euros</th>
-                                </tr>
-                            </thead>
-                            <tbody></tbody>
-                        </table>
-                        <p class="subtitle is-6">Bitcoin(BTC)</p>
-                            <figure class="image is-24x24">
-                                <img class="is-rounded" src="/static/png/bitcoin-btc-logo.png">
-                            </figure>-->
-                            
-                        <div class="icon-text">
-                            
-                                <figure class="is-rounded" src="/static/png/bitcoin-btc-logo.png"></figure>
-                            
-                            <span>Bitcoin(BTC)</span>
-                        </div>
-                              
+                        
+                    
+                    </form>
+                     
+                    <br/>
+                        <div class="container">
+                        <div class="row"> 
+                        <h3 class="title is-3">Saldos actuales</h3>
+                        
+                            <!--<table class="table-saldos is-striped is-hoverable is-primary" name="tabla-saldos" id="tabla-saldos">
+                                <thead class="has-backgorund-info">
+                                    <tr is-selected>
+                                        <th>moneda</th>
+                                        <th>saldo</th>
+                                        <th>valor_en_euros</th>
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
+                            <p class="subtitle is-6">Bitcoin(BTC)</p>
+                                <figure class="image is-24x24">
+                                    <img class="is-rounded" src="/static/png/bitcoin-btc-logo.png">
+                                </figure>-->
+                                
+                            <div class="icon-text">
+                                
+                                    <figure class="is-rounded" src="/static/png/bitcoin-btc-logo.png"></figure>
+                                
+                                <span>Bitcoin(BTC)</span>
+                            </div>
+                            </div>
+                                
                         
                     </div>
                     </div>
                     </div>
                     
-                    <div class="row">  
-                        <div class="column is-4"></div>
-                            
-                        </div>
-                    </div>    
+                    
                 </div>
             </div>
             
 
     </section> 
-    <hr>
+  
     <section class="section" id="secundaria"> 
     <div class="detail-movimiento container">
         <h3 class="title is-3">Compra y convierte tus criptomonedas</h3>
-        <form name="form">
+        <form class="box has-background-white-bis" name="form" id="form">
             <div class="row">
                 <input type="hidden" id="idMovimiento">
                 <input type="hidden" id="cantidad_inicial_oculta">
@@ -186,13 +190,13 @@
                 
             <div class="row">
                 <div class="column"></div>
-                
-                    <button class="button is-info is-hovered is-focused" id="convertir">Convertir</button>
+                    <div class="control">
+                    <button class="button is-info is-hovered is-focused pr-4" id="convertir">Convertir</button>
                     
-                    <button class="button is-pulled-center is-success is-hovered is-focused" id="comprar" type="submit">Comprar</button>
-                        
-                     <button class="button is-pulled-center is-danger is-hovered is-focused" id="cancelar" >Cancelar</button>
-                       
+                    <button class="button is-pulled-center is-success is-hovered is-focused" name="comprar" id="comprar" type="submit">Comprar</button>
+                      
+                    <button class="button is-pulled-center is-danger is-hovered is-focused" id="cancelar" type="reset">Cancelar</button>
+                    </div>   
                     </div>   
                 </div>  
             </div>
