--- a/myCrypto/templates/spa_crypto.html
+++ b/myCrypto/templates/spa_crypto.html
@@ -54,14 +54,17 @@
                     <div class="column is-4">
                     <form class="box" name="form-status" id="form-status">
                         <h3 class="title is-3">Estado de la inversión</h3>
-                        <label class="label is-size-5 mb-4">Total invertido (€):</label>
+                        <label class="label is-size-5 mb-4">Euros invertidos:</label>
                         <input class="input is-normal" type="number" name="total_invertido" id="total_invertido" readonly>
-                        <label class="label is-size-5 mb-4">Valor actual (€):</label>
+                        <label class="label is-size-5 mb-4">Valor actual de la inversión (€):</label>
                         <input class="input is-normal" type="number" name="valor_actual" id="valor_actual" readonly>
-                        <div class="is-size-5 mb-4">Beneficio obtenido (€):</div>
+                        <label class="label is-size-5 mb-4">Beneficio obtenido (€):</label>
+                        <input class="input is-normal" type="number" name="beneficio_obtenido" id="beneficio_obtenido" readonly>
                         
-                        <button class="button is-success is-hovered is-focused" id="actualizar" >Actualizar</button><br/>
-                        
+                    </br> 
+                        <div>
+                            <button class="button is-success is-hovered is-focused" id="actualizar" >Actualizar</button><br/>
+                        </div>
                     
                     </form>
                      
