Conseuida validacion en frontend  no se puede vender mas del saldo disponible

--- a/myCrypto/templates/spa_crypto.html
+++ b/myCrypto/templates/spa_crypto.html
@@ -70,8 +70,10 @@
                      
                     <br/>
                         <div class="container">
-                        <div class="row"> 
-                        <h3 class="title is-3">Saldos actuales</h3>
+                            <div class="row"> 
+                            <h3 class="title is-3">Saldos actuales</h3>
+                                <div class="table-container">
+                                    <table class="table is-striped is-hoverable is-primary" id="ulListado">
                         
                             <!--<table class="table-saldos is-striped is-hoverable is-primary" name="tabla-saldos" id="tabla-saldos">
                                 <thead class="has-backgorund-info">
@@ -86,19 +88,20 @@
                             <p class="subtitle is-6">Bitcoin(BTC)</p>
                                 <figure class="image is-24x24">
                                     <img class="is-rounded" src="/static/png/bitcoin-btc-logo.png">
-                                </figure>-->
+                                </figure>
                                 
                             <div class="icon-text">
                                 
                                     <figure class="is-rounded" src="/static/png/bitcoin-btc-logo.png"></figure>
                                 
                                 <span>Bitcoin(BTC)</span>
-                            </div>
-                            </div>
-                                
+                            </div>-->
+                            
+                                </div>   
+                                </table>   
                         
-                    </div>
-                    </div>
+                            </div>
+                        </div>
                     </div>
                     
                     
