--- a/myCrypto/static/css/styles.css
+++ b/myCrypto/static/css/styles.css
@@ -1,5 +1,13 @@
 select#moneda_from option[value="BTC"]   { background-image:url(https://cryptologos.cc/logos/bitcoin-btc-logo.png?v=013);   }
 
-.tabla-movimientos tbody tr:hover { /*Esto es para que cuando pase por encima de cada fila de la tabla, esta se sombree*/
-    background-color: aquamarine;
+.table tbody tr:hover { 
+    background-color: hsl(48, 100%, 96%);
+}
+
+.table thead {
+    background-color: hsl(206, 70%, 96%)
+}       
+
+#tabla-saldos tbody tr:hover { 
+    background-color: hsl(48, 100%, 96%);
 }
