--- a/myCrypto/templates/spa_crypto.html
+++ b/myCrypto/templates/spa_crypto.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Crypto Invest App</title>
-    <link rel="stylesheet" href="/static/css/bulma.css"><!-- esta linea enlaza a la carpeta static/css para que el navegador muestre los resultados con estilos y no solo un json-->
+    <link rel="stylesheet" href="/static/css/bulma.css">
     <link rel="stylesheet" href="/static/css/styles.css">
     <script src="/static/js/spa_crypto.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> <!-- Esta linea sirve para que el navegador enlace al archivo spa.js que es donde se va a crear el template que va a mostrar la pagina-->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> 
     
 </head>
 
